<resources>
    <string name="app_name">ANTHONIUS_1202150034_MODUL6</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="minimum_password">Minimum password adalah 6 kata</string>
    <string name="auth_failed">Gagal login</string>
    <string name="logout">Keluar</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="masukan_judul">Masukan judul</string>
    <string name="masukan_isi">Masukan isi</string>
    <string name="upload">Upload</string>
</resources>
