<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.levegra.anthonius_1202150034_modul6.AddPostActivity">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/et_title_post"
            android:hint="@string/masukan_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_post"
            android:hint="@string/masukan_isi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"/>
        <Button
            android:id="@+id/btn_choose_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/pilih_gambar"
            android:background="#D3D3D3"
            android:textColor="#000000"/>
        <ImageView
            android:id="@+id/img_post"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/upload"
            android:backgroundTint="#D3D3D3"
            android:textColor="#000000"
            android:onClick="add"/>

    </LinearLayout>
</ScrollView>
